tests/NormalTests/paczka2/big_fuzzy/99477205.err
Error in line 11: DIJ S839 49,7
Error in line 17: ML5qfy A929 251,78
Error in line 19: UQuzvl S839 93,0
Error in line 20: bs2vB5k S839 72,7
Error in line 15: DIJ A929 21,4
Error in line 22: bs2vB5k A516 23,5
Error in line 14: ML5qfy A929 52,9
Error in line 26: ML5qfy S839 21,8
Error in line 32: WX6o9AAYV7A S839 60,3
Error in line 40: bs2vB5k A929 17,8
Error in line 46: bs2vB5k S689 49,78
Error in line 48: UQuzvl A16 9,9
Error in line 41: bs2vB5k S839 54,1
Error in line 64: bs2vB5k S839 48,7
Error in line 59: DFiMJ A929 38,7
Error in line 69: DFiMJ S839 57,8
Error in line 63: DIJ A929 17,0
Error in line 66: bs2vB5k S689 33,8
Error in line 85: S839 A929 259,3
Error in line 82: UQuzvl S689 54,4
Error in line 95: WX6o9AAYV7A S839 21,3
Error in line 86: DIJ S839 131,0
Error in line 99: bs2vB5k S839 92,9
Error in line 89: DFiMJ A929 37,6
Error in line 110: WX6o9AAYV7A A929 96,7
Error in line 124: WX6o9AAYV7A S839 44,5
Error in line 130: DFiMJ S839 90,0
Error in line 129: WX6o9AAYV7A A516 30,0
Error in line 138: DIJ S839 26,4
Error in line 147: UQuzvl S839 111,5
Error in line 146: DIJ A929 290,2
Error in line 160: bs2vB5k S689 275,09
Error in line 172: S839 S689 96,0
Error in line 190: DIJ A929 46,8
Error in line 188: ML5qfy S689 141,4
Error in line 159: bs2vB5k S689 68,3
Error in line 200: bs2vB5k S839 4,5
Error in line 199: WX6o9AAYV7A A929 9,4
Error in line 215: DIJ S689 13,93
Error in line 216: UQuzvl A929 47,2
Error in line 229: ML5qfy S839 126,7
Error in line 236: ML5qfy S689 32,9
